--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header div img {
 }
 
 body {
-    background-image: url(/assets/bg.jpg);
+    background-image: url(./assets/bg.jpg);
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
